Fix footer overlapping content on profile page in safari

--- a/wonder/romeo/static/scss/_theme/_theme.structure.scss
+++ b/wonder/romeo/static/scss/_theme/_theme.structure.scss
@@ -19,8 +19,7 @@
 .wrapper {
   margin-right: auto;
   margin-left:  auto;
-  padding-right: $base-spacing-unit;
-  padding-left:  $base-spacing-unit;
+  padding: 0 $base-spacing-unit $base-spacing-unit;
   position: relative;
   @extend .cf;
 }
